<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items_for_bidding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.proiect.echipa478a.proiectandroid.ui.ListItemsForBidding">

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addPriceLabel"
        android:layout_alignBaseline="@+id/addPriceEditText"
        android:layout_alignBottom="@+id/addPriceEditText"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/please_add_an_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/insertItemTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:text="@string/item_name_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/addNameLabel"
        android:layout_below="@+id/insertItemTitle"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/addImageURL"
        android:layout_below="@+id/addPriceEditText"
        android:layout_alignParentEnd="true"
        android:hint="@string/image_url" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/addPriceEditText"
        android:layout_below="@+id/addNameEditText"
        android:layout_alignParentEnd="true"
        android:hint="@string/item_price" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/addNameEditText"
        android:layout_alignBaseline="@+id/addNameLabel"
        android:layout_alignBottom="@+id/addNameLabel"
        android:layout_alignParentEnd="true"
        android:hint="@string/name" />

    <TextView
        android:text="@string/image_optional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addImageLabel"
        android:layout_alignBaseline="@+id/addImageURL"
        android:layout_alignBottom="@+id/addImageURL"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp" />
</RelativeLayout>
