<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.proiect.echipa478a.proiectandroid.ui.MainActivity">

    <Button
        android:text="@string/bid_on_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bidOnItemsBtn"
        android:layout_below="@+id/mainTextView"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:layout_marginTop="17dp" />

    <Button
        android:text="@string/list_an_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listItemBtn"
        android:layout_alignBaseline="@+id/bidOnItemsBtn"
        android:layout_alignBottom="@+id/bidOnItemsBtn"
        android:onClick="onClick"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/welcome_to_our_bidding_application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainTextView"
        android:layout_marginTop="14dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textAlignment="center" />

    <Switch
        android:text="@string/auto_sync_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp"
        android:id="@+id/syncSwitch"
        android:checked="false" />

    <TextView
        android:text="@string/auto_sync_off_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/syncSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/syncInfoTextView"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:text="Request Items From Ebay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ebayItemsBtn"
        android:layout_below="@+id/bidOnItemsBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

    <Button
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerBtn"
        android:layout_above="@+id/syncSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp" />
</RelativeLayout>
